; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_dlltool.c_def_library.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_dlltool.c_def_library.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"LIBRARY: %s base: %x\00", align 1
@d_is_exe = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [28 x i8] c"Can't have LIBRARY and NAME\00", align 1
@dll_name = common dso_local global i32 0, align 4
@d_is_dll = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @def_library(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 @_(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @inform(i32 %5, i8* %6, i32 %7)
  %9 = load i64, i64* @d_is_exe, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = call i32 @_(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %13 = call i32 @non_fatal(i32 %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32, i32* @dll_name, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = load i8*, i8** %3, align 8
  %19 = call i32 @set_dll_name_from_def(i8* %18)
  br label %20

20:                                               ; preds = %17, %14
  store i32 1, i32* @d_is_dll, align 4
  ret void
}

declare dso_local i32 @inform(i32, i8*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @non_fatal(i32) #1

declare dso_local i32 @set_dll_name_from_def(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
